--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
   <groupId>com.itblueprints</groupId>
-  <artifactId>system-agent</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>system-agent</name>
+  <artifactId>sysagent</artifactId>
+  <version>0.0.3-SNAPSHOT</version>
+  <name>sysagent</name>
   <description>Spring Library for System Agent</description>
   <properties>
     <java.version>17</java.version>
