--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   </parent>
   <groupId>com.itblueprints</groupId>
   <artifactId>sysagent</artifactId>
-  <version>0.0.3-SNAPSHOT</version>
+  <version>0.0.3</version>
   <name>sysagent</name>
   <description>Spring Library for System Agent</description>
   <properties>
