--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,28 @@
   <artifactId>sysagent</artifactId>
   <version>0.0.3</version>
   <name>sysagent</name>
-  <description>Spring Library for System Agent</description>
+  <description>Spring library for execution of system tasks in a cluster backed by MongoDB</description>
+  <url>https://github.com/it-blueprints/sysagent</url>
+  <licenses>
+    <license>
+      <name>MIT License</name>
+      <url>http://www.opensource.org/licenses/mit-license.php</url>
+    </license>
+  </licenses>
+  <developers>
+    <developer>
+      <name>Nilanjan Biswas</name>
+      <email>nilanjan_biswas@hotmail.com</email>
+      <organization>IT Blueprints</organization>
+      <organizationUrl>https://www.itblueprints.com</organizationUrl>
+    </developer>
+  </developers>
+  <scm>
+    <connection>scm:git:https://github.com/it-blueprints/sysagent.git</connection>
+    <developerConnection>scm:git:git@github.com:it-blueprints/sysagent.git</developerConnection>
+    <url>https://github.com/it-blueprints/sysagent/tree/main</url>
+  </scm>
+
   <properties>
     <java.version>17</java.version>
   </properties>
