--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,12 @@
       <version>5.9.0</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>mongodb</artifactId>
+      <version>1.19.4</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
